src/objects/Master_Exam_List__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Method__c</fullName>
        <label>Application Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>License_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Endorsement_Type__c</fullName>
        <label>Endorsement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Endorsement_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exam_Approval_Expiry_Rule__c</fullName>
        <label>Exam Approval Expiry Rule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exam_Record_Type_ID__c</fullName>
        <label>Exam Record Type ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Result_Expiry_Rule__c</fullName>
        <label>Exam Result Expiry Rule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exam_Type__c</fullName>
        <label>Exam Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exam_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <label>Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potential_Application_By__c</fullName>
        <label>Potential Application By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Registration</fullName>
                </value>
                <value>
                    <fullName>By Exam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reschedule_via_DOL__c</fullName>
        <label>Reschedule via DOL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved with Conditions</fullName>
                </value>
                <value>
                    <fullName>Corrections Required</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Exam Approved</fullName>
                </value>
                <value>
                    <fullName>In-Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_SubStatus__c</fullName>
        <label>Review Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FE Approved</fullName>
                </value>
                <value>
                    <fullName>PE Approved</fullName>
                </value>
                <value>
                    <fullName>PE/FE Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Exam_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Exam Results</label>
        <type>Checkbox</type>
    </fields>
    <label>Master Exam List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Master Exam List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Exam Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>